# AI_TUTOR

./: .gitignore  .replit  agent_handler.py  app.py  config_manager.py  migrate_annotations.py  prompts.yaml  providers.py  pyproject.toml  pyrightconfig.json  rag_helper.py  requirements.txt  run.py  startup.py  study_agents.py
.local/state/replit/: log-query.db-shm  log-query.db-wal
static/css/: audio_session.css  chat_session.css  dashboard.css  pdf_session.css  session.css  text_session.css
static/js/: audio_session.js  chat_session.js  dashboard.js  pdf_session.js  session.js  text_session.js
templates/: about.html  audio_session.html  auth.html  chat_session.html  dashboard.html  history.html  landing.html  pdf_session.html  profile.html  session.html  text_session.html
